# src/main/kotlin/no/nav/syfo/oppfolgingsplan/dto/ArbeidsgiverOppfolgingsplanOverviewResponse.kt
@@ -41,8 +41,7 @@ data class ArbeidsgiverOppfolgingsplanOverviewResponse(
 data class SykmeldtOppfolgingsplanOverviewResponse(
     val aktiveOppfolgingsplaner: List<OppfolgingsplanMetadata>,
     val tidligerePlaner: List<OppfolgingsplanMetadata>,
-    val unntaksvurderinger: List<UnntaksvurderingMetadata>,
-    val gjeldendeUnntaksvurderinger: List<UnntaksvurderingMetadata>,
+    val unntaksvurderinger: List<SykmeldtUnntaksvurdering>,
 )
 
 enum class GjeldendeStatus {
@@ -66,6 +65,24 @@ data class UnntaksvurderingMetadata(
     val meldtTidspunkt: Instant,
     val meldtAv: MeldtAv,
     val organization: OrganizationDetails,
+)
+
+data class SykmeldtUnntaksvurdering(
+    val id: UUID,
+    val meldtTidspunkt: Instant,
+    val meldtAv: MeldtAv,
+    val organization: OrganizationDetails,
+    val gjeldende: Boolean,
+)
+
+fun UnntaksvurderingMetadata.tilSykmeldtUnntaksvurdering(
+    gjeldende: Boolean,
+): SykmeldtUnntaksvurdering = SykmeldtUnntaksvurdering(
+    id = id,
+    meldtTidspunkt = meldtTidspunkt,
+    meldtAv = meldtAv,
+    organization = organization,
+    gjeldende = gjeldende,
 )
 
 fun utledGjeldendeStatus(
